--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,49 @@
+*{
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
 
-
+}
+body{margin: 0
+    ;}
 
 
 header,footer{
-    background-color: rgb(124, 8, 128)!important;
+    background-color: rgb(137, 92, 14)!important;
 }
 
+footer{
+height: 50px ;
+
+}
+.container_main{
+    background-color: rgb(255, 255, 255);
+    margin: 3% auto;
+}
+
+
+.quienesSomos{margin-top: 3%;
+    margin-bottom: 3%;
+
+
+}
+
+
+/*titulos*/
+.title,.title_2 {
+    font-family: 'Dancing Script'!important;
+    color: rgb(137, 92, 14)!important;
+};
+  
+
+.galeria{
+   display: grid!important;
+   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr))!important;
+   width: 95%;
+   margin: auto;
+   grid-gap:10px;
+}
+
+.galeria img{
+    width: 100%;
+}
