--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,4 @@
-*{
-   box-sizing: border-box;
-   margin: 0;
-   padding: 0;
 
-}
-body{margin: 0
-    ;}
-
-
-header,footer{
-    background-color: rgb(254, 208, 73)!important;
-}
-
-footer{
-height: 50px ;
-
-}
-.container_main{
-    background-color: rgb(255, 255, 255);
-    /*margin: 3% auto;*/
-}
-
-
-.quienesSomos{margin-top: 3%;
-    margin-bottom: 3%;
-
-
-}
-
-
-/*titulos*/
-.title,.title_2 {
-    font-family: 'Dancing Script'!important;
-    color: rgb(137, 92, 14)!important;
-};
   
 
 .galeria{display: flex;
@@ -41,9 +6,9 @@ height: 50px ;
    padding: 10px 20px ;
 }
 
-.columna{/*display: flex;*/
+.columna{
     flex: 20%;
-    max-width: 20%;
+    max-width: 100%;
     padding: 0 4px;
 }
 .columna img{
@@ -53,3 +18,47 @@ width: 100%;
 filter: grayscale(100%);
 transition: aa .3s ease;
 }
+
+.columna img:hover{
+    cursor: pointer;
+    filter: grayscale(0%);
+    box-shadow: 0 0 10px rgb(0 , 0 , 0 , 0.5);
+    transform: scale(1.1);
+ }
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+ 
+ }
+ body{margin: 0
+     ;}
+ 
+ 
+ header,footer{
+     background-color: rgb(254, 208, 73)!important;
+ }
+ 
+ footer{
+ height: 50px ;
+ 
+ }
+ .container_main{
+     background-color: rgb(255, 255, 255);
+     /*margin: 3% auto;*/
+ }
+ 
+ 
+ .quienesSomos{margin-top: 3%;
+     margin-bottom: 3%;
+ 
+ 
+ }
+ 
+ 
+ /*titulos*/
+ .title,.title_2 {
+     font-family: 'Dancing Script'!important;
+     color: rgb(137, 92, 14)!important;
+ };
