--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,30 @@
+#alojamiento{
+    background-color: rgb(221, 219, 219);
+    padding: 25px;
+    margin: 30px 0 !important;
+    display: flex!important;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img_prestaciones{
+    max-width: 70%!important;
+    border-radius: 5%!important;
+    align-items: center;
+}
+
+/**/
 *,*:before, *::after{
     padding: 0;
     margin: 0;
     outline: 0;
     box-sizing: border-box;
-    font-family: '';
+    font-family: 'Roboto', sans-serif;
 }
- 
+
  header,footer{
-     background-color: rgb(254, 208, 73)!important;
+     background:linear-gradient(70deg, rgb(199, 110, 9), rgb(254, 208, 73))!important ;
+     font-family: 'Roboto', sans-serif
  }
  
  footer{
@@ -19,24 +36,37 @@
      /*margin: 3% auto;*/
  }
  
- 
- .quienesSomos{margin-top: 3%;
+.section_lugar{display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 3%;
      margin-bottom: 3%;
+     background-color: rgb(221, 219, 219);
+    padding: 25px;
+    margin: 30px 0 !important;
+
+}
+.section_lugar img{
+    border-radius: 10%;
+}
  
- 
+ .quienesSomos {display: flex;
+    flex-direction: column;
+    margin-top: 3%;
+     margin-bottom: 3%;
+    }
+ .carrusel{
+    margin: 30px 0;
  }
- 
  
  /*titulos*/
  .title,.title_2 {
-     font-family: 'Dancing Script'!important;
-     color: rgb(137, 92, 14)!important;
- };
-
-
- .section_lugar{ display: flex!important;
-                align-items: center;
+    
+     color: rgb(249, 165, 19)!important;
  }
+
+
+
   
 /*COMIENZO DE LA GALERIA*/
 .galeria{display: flex;
