--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* SECCION ALOJAMIENTO*/
 #alojamiento{
     background-color: rgb(221, 219, 219);
     padding: 25px;
@@ -6,13 +7,110 @@
     flex-direction: column;
     align-items: center;
 }
-
+/*IMAGEN DE PRESTACIONES*/
 .img_prestaciones{
-    max-width: 70%!important;
+    max-width: 90%!important;
     border-radius: 5%!important;
     align-items: center;
 }
+/*SECCION CONTACTO*/
+#contacto{
+    margin: 30px 0 !important;
+    padding: 25px 25px;
+    background-color: rgb(221, 219, 219);
+    ;
+    
+}
+.contenedor-contacto{
+    margin: 25px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
 
+
+
+.form-registro {
+    width: 400px;
+    /*background: linear-gradient(to bottom, #50045f, #0b5c70) !important*/;
+    padding: 30px;
+    margin: 30px;
+    margin-top: 15px;
+    border-radius: 10px;
+    font-family: "Roboto";
+     }
+  
+  .data {
+    width: 330px; }
+  
+  .submit {
+    background:  rgb(254, 208, 73);
+    width: 150px;
+    margin-top: 20px;
+    margin-left: 90px;
+    padding: 15px;
+    font-family: "Roboto";
+    border-radius: 5%;
+    color: white; }
+    .submit:hover {
+        background: rgb(199, 110, 9);
+        transition: all .2s ease;}
+
+
+/* 14 */
+button {
+    margin: 20px;
+  }
+  .custom-btn {
+    width: 130px;
+    height: 40px;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px 25px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    background: transparent;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+     7px 7px 20px 0px rgba(0,0,0,.1),
+     4px 4px 5px 0px rgba(0,0,0,.1);
+    outline: none;
+  }
+.btn-14 {
+    background: rgb(255,151,0);
+    border: none;
+    z-index: 1;
+  }
+  .btn-14:after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 0;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 5px;
+    background-color: #eaf818;
+    background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
+     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5);
+    /**/;
+    transition: all 0.3s ease;
+  }
+  .btn-14:hover {
+    color: #000;
+  }
+  .btn-14:hover:after {
+    top: auto;
+    bottom: 0;
+    height: 100%;
+  }
+  .btn-14:active {
+    top: 2px;
+  }        
 /**/
 *,*:before, *::after{
     padding: 0;
@@ -21,21 +119,22 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
+/*HEADER AND FOOTER*/
  header,footer{
-     background:linear-gradient(70deg, rgb(199, 110, 9), rgb(254, 208, 73))!important ;
+     background:linear-gradient(70deg, rgb(255, 167, 74), rgb(255, 210, 74))!important ;
      font-family: 'Roboto', sans-serif
  }
- 
+ /*FOOTER*/
  footer{
  height: 50px ;
  
  }
+ /*CONTAINER*/
  .container_main{
      background-color: rgb(255, 255, 255);
      /*margin: 3% auto;*/
  }
- 
+ /*SECCION LUGAR*/
 .section_lugar{display: flex;
     align-items: center;
     flex-direction: column;
@@ -44,17 +143,22 @@
      background-color: rgb(221, 219, 219);
     padding: 25px;
     margin: 30px 0 !important;
-
+/*IMAGEN DE LUGAR*/
 }
 .section_lugar img{
     border-radius: 10%;
 }
- 
+ /*INICIO*/
  .quienesSomos {display: flex;
     flex-direction: column;
     margin-top: 3%;
      margin-bottom: 3%;
     }
+ .form-registro{
+    background-color: rgb(221, 219, 219);
+ }   
+
+ /*CARRUSEL*/   
  .carrusel{
     margin: 30px 0;
  }
@@ -64,7 +168,10 @@
     
      color: rgb(249, 165, 19)!important;
  }
-
+ .title{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+ }
 
 
   
