--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* SECCION ALOJAMIENTO*/
 #alojamiento{
-    background-color: rgb(221, 219, 219);
+    background-color: rgb(214, 228, 229);
     padding: 25px;
     margin: 30px 0 !important;
     display: flex!important;
@@ -17,16 +17,20 @@
 #contacto{
     margin: 30px 0 !important;
     padding: 25px 25px;
-    background-color: rgb(221, 219, 219);
-    ;
+    background-color: rgb(214, 228, 229);
+    
     
 }
-.contenedor-contacto{
+
+
+.contenedor-contacto {
+    display: flex!important;
     margin: 25px 0;
-    display: flex;
+    justify-content: space-around;
+    align-content: space-around;
     align-items: center;
-    justify-content: space-evenly;
-    align-items: flex-start;
+    
+    
 }
 
 
@@ -43,7 +47,10 @@
   
   .data {
     width: 330px; }
-  
+  .data_mensaje{
+    width: 330px;
+    height: 150px; ;
+  }
   .submit {
     background:  rgb(254, 208, 73);
     width: 150px;
@@ -58,59 +65,113 @@
         transition: all .2s ease;}
 
 
-/* 14 */
-button {
-    margin: 20px;
-  }
-  .custom-btn {
-    width: 130px;
-    height: 40px;
-    color: #fff;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
-    outline: none;
-  }
-.btn-14 {
-    background: rgb(255,151,0);
-    border: none;
-    z-index: 1;
-  }
-  .btn-14:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 0;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    border-radius: 5px;
-    background-color: #eaf818;
-    background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
-     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5);
-    /**/;
-    transition: all 0.3s ease;
-  }
-  .btn-14:hover {
-    color: #000;
-  }
-  .btn-14:hover:after {
-    top: auto;
-    bottom: 0;
-    height: 100%;
-  }
-  .btn-14:active {
-    top: 2px;
-  }        
+        p {
+            font-family: 'Lato', sans-serif;
+            font-weight: 300;
+            text-align: center;
+            font-size: 18px;
+            color: #676767;
+          }
+          .frame {
+            width: 90%;
+            margin: 40px auto;
+            text-align: center;
+          }
+          button {
+            margin: 20px;
+          }
+          .custom-btn {
+            width: 130px;
+            height: 40px;
+            color: #fff;
+            border-radius: 5px;
+            padding: 10px 25px;
+            font-family: 'Lato', sans-serif;
+            font-weight: 500;
+            background: transparent;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+            display: inline-block;
+             box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+             7px 7px 20px 0px rgba(0,0,0,.1),
+             4px 4px 5px 0px rgba(0,0,0,.1);
+            outline: none;
+          }
+/* 7 */
+.btn-7 {
+    background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
+      line-height: 42px;
+      padding: 0;
+      border: none;
+    }
+    .btn-7 span {
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+    .btn-7:before,
+    .btn-7:after {
+      position: absolute;
+      content: "";
+      right: 0;
+      bottom: 0;
+      background: rgba(251,75,2,1);
+      box-shadow:
+       -7px -7px 20px 0px rgba(255,255,255,.9),
+       -4px -4px 5px 0px rgba(255,255,255,.9),
+       7px 7px 20px 0px rgba(0,0,0,.2),
+       4px 4px 5px 0px rgba(0,0,0,.3);
+      transition: all 0.3s ease;
+    }
+    .btn-7:before{
+       height: 0%;
+       width: 2px;
+    }
+    .btn-7:after {
+      width: 0%;
+      height: 2px;
+    }
+    .btn-7:hover{
+      color: rgba(251,75,2,1);
+      background: transparent;
+    }
+    .btn-7:hover:before {
+      height: 100%;
+    }
+    .btn-7:hover:after {
+      width: 100%;
+    }
+    .btn-7 span:before,
+    .btn-7 span:after {
+      position: absolute;
+      content: "";
+      left: 0;
+      top: 0;
+      background: rgba(251,75,2,1);
+      box-shadow:
+       -7px -7px 20px 0px rgba(255,255,255,.9),
+       -4px -4px 5px 0px rgba(255,255,255,.9),
+       7px 7px 20px 0px rgba(0,0,0,.2),
+       4px 4px 5px 0px rgba(0,0,0,.3);
+      transition: all 0.3s ease;
+    }
+    .btn-7 span:before {
+      width: 2px;
+      height: 0%;
+    }
+    .btn-7 span:after {
+      height: 2px;
+      width: 0%;
+    }
+    .btn-7 span:hover:before {
+      height: 100%;
+    }
+    .btn-7 span:hover:after {
+      width: 100%;
+    }
+    /*FIN SECCION BOTONES*/
 /**/
 *,*:before, *::after{
     padding: 0;
@@ -131,7 +192,7 @@ button {
  }
  /*CONTAINER*/
  .container_main{
-     background-color: rgb(255, 255, 255);
+     background-color:  rgb(255, 255, 255);
      /*margin: 3% auto;*/
  }
  /*SECCION LUGAR*/
@@ -140,7 +201,7 @@ button {
     flex-direction: column;
     margin-top: 3%;
      margin-bottom: 3%;
-     background-color: rgb(221, 219, 219);
+     background-color: rgb(214, 228, 229);
     padding: 25px;
     margin: 30px 0 !important;
 /*IMAGEN DE LUGAR*/
@@ -149,13 +210,14 @@ button {
     border-radius: 10%;
 }
  /*INICIO*/
- .quienesSomos {display: flex;
+ .quienesSomos {
+    display: flex;
     flex-direction: column;
     margin-top: 3%;
      margin-bottom: 3%;
     }
  .form-registro{
-    background-color: rgb(221, 219, 219);
+    background-color:  rgb(214, 228, 229);
  }   
 
  /*CARRUSEL*/   
@@ -291,6 +353,7 @@ cursor: pointer;
 /*FIN DE LA GALERIA*/
 
 
+
 /*MEDIA QUIERIS PARA TABLET*/
 @media screen and (max-width: 800px) {
     .columna{
@@ -313,8 +376,14 @@ cursor: pointer;
     .slideshow img {
         width: 98%;
     }
-}
 
+
+
+
+    #contacto
+    { flex-direction: column;
+}
+}
 /*MEDIA QUIERIS PARA CELULAR*/
 
 @media screen and (max-width:600px) {
@@ -322,6 +391,9 @@ cursor: pointer;
         flex: 100%;
         max-width: 100%;
     }
+    #contacto
+    { flex-direction: column;  
+}
 }
 
 
