--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* SECCION ALOJAMIENTO*/
 #alojamiento{
-    background-color: rgb(214, 228, 229);
+    background-color: rgb(221, 219, 219);
     padding: 25px;
     margin: 30px 0 !important;
     display: flex!important;
@@ -9,7 +9,7 @@
 }
 /*IMAGEN DE PRESTACIONES*/
 .img_prestaciones{
-    max-width: 90%!important;
+    max-width: 75%!important;
     border-radius: 5%!important;
     align-items: center;
 }
@@ -17,18 +17,24 @@
 #contacto{
     margin: 30px 0 !important;
     padding: 25px 25px;
-    background-color: rgb(214, 228, 229);
+    background-color: rgb(221, 219, 219);
     
     
 }
 
-
+.contacto-cel-mail-redes{display: flex;
+ flex-direction: column;
+}
+.p_contacto{
+  
+  padding: 20px ;
+}
 .contenedor-contacto {
     display: flex!important;
     margin: 25px 0;
     justify-content: space-around;
     align-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     
     
 }
@@ -37,19 +43,44 @@
 
 .form-registro {
     width: 400px;
-    /*background: linear-gradient(to bottom, #50045f, #0b5c70) !important*/;
-    padding: 30px;
-    margin: 30px;
-    margin-top: 15px;
+    background-color: #676767;
+    margin: 20px 0;
     border-radius: 10px;
     font-family: "Roboto";
      }
   
+
+.form-contacto{
+  
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+
+}
+.title_form{font-family:"Roboto",sans-serif;
+  padding:10px 0;
+  font-weight: 400;
+  text-align: center;
+  color: white;
+  width: 440px;
+  height: 45px;
+  background: linear-gradient(0deg, rgba(255,151,0,1) 0%, rgba(251,75,2,1) 100%);
+}   
+
+fieldset{
+ display: flex;
+ flex-direction: column;
+align-items: center;
+
+}
   .data {
-    width: 330px; }
+    width: 330px; 
+  margin: -5px 0;}
   .data_mensaje{
+    
     width: 330px;
-    height: 150px; ;
+    height: 70px; ;
   }
   .submit {
     background:  rgb(254, 208, 73);
@@ -185,9 +216,33 @@
      background:linear-gradient(70deg, rgb(255, 167, 74), rgb(255, 210, 74))!important ;
      font-family: 'Roboto', sans-serif
  }
+ /*botones de navbar */ 
+
+.btn-2 {
+ 
+  margin: 0;
+  padding: 5px 5px;
+  
+  border: none;
+  
+}
+.btn-2:before {
+  height: 0%;
+  width: 2px;
+}
+.btn-2:hover {
+  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+              -4px -4px 6px 0 rgba(116, 125, 136, .5), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+
  /*FOOTER*/
- footer{
- height: 50px ;
+ footer{display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 25px;
+ height: 60px ;
  
  }
  /*CONTAINER*/
@@ -201,7 +256,7 @@
     flex-direction: column;
     margin-top: 3%;
      margin-bottom: 3%;
-     background-color: rgb(214, 228, 229);
+     background-color: rgb(221, 219, 219);
     padding: 25px;
     margin: 30px 0 !important;
 /*IMAGEN DE LUGAR*/
@@ -217,7 +272,7 @@
      margin-bottom: 3%;
     }
  .form-registro{
-    background-color:  rgb(214, 228, 229);
+    background-color:  rgb(221, 219, 219);
  }   
 
  /*CARRUSEL*/   
@@ -391,8 +446,9 @@ cursor: pointer;
         flex: 100%;
         max-width: 100%;
     }
-    #contacto
-    { flex-direction: column;  
+    .contenedor-contacto
+    { flex-direction: column; 
+      align-items: center; 
 }
 }
 
